force-app/main/default/objects/KimbleOne__ActivityAssignmentRate__c/KimbleOne__ActivityAssignmentRate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Assignment Rate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ActivityAssignmentRate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>