force-app/main/default/objects/KimbleOne__ActivityAssignmentRate__c/fields/KimbleOne__ActivityPeriodRateBand__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityPeriodRateBand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Band</label>
    <referenceTo>KimbleOne__ActivityPeriodRateBand__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>ActivityAssignmentRates</relationshipName>
    <type>Lookup</type>
</CustomField>