force-app/main/default/objects/KimbleOne__ActivityAssignmentRate__c/fields/KimbleOne__CostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostRate__c</fullName>
    <label>Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>