force-app/main/default/objects/KimbleOne__ActivityAssignmentRate__c/fields/KimbleOne__IntInvCcyInternalRevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyInternalRevenueRate__c</fullName>
    <label>Internal Invoicing Ccy Revenue Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>