force-app/main/default/objects/KimbleOne__ActivityAssignmentRate__c/fields/KimbleOne__IsOverridden__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsOverridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Overridden?</label>
    <type>Checkbox</type>
</CustomField>